--- a/tools/objtool/Makefile
+++ b/tools/objtool/Makefile
@@ -45,6 +45,11 @@ ifeq ($(SRCARCH),x86)
 	BUILD_ORC := y
 endif
 
+ifeq ($(SRCARCH),riscv)
+	BUILD_ORC := y
+endif
+
+
 export BUILD_ORC
 export srctree OUTPUT CFLAGS SRCARCH AWK
 include $(srctree)/tools/build/Makefile.include
