--- a/arch/arm64/boot/dts/freescale/continental_adc435_baseboard.dts
+++ b/arch/arm64/boot/dts/freescale/continental_adc435_baseboard.dts
@@ -1288,6 +1288,11 @@
 	pinctrl-0 = <&gmac0rgmiic_pins>, <&gmac0mdioc_pins>;
 	phy-handle = <&gmac_mdio_c_phy1>;
 	phy-mode = "rgmii-id";
+	fixed-link {
+	      speed = <1000>;
+	      full-duplex;
+	};
+
 };
 
 
