renamed ADC435 to HDK v1.1

--- a/arch/arm64/boot/dts/freescale/continental_hdk11_baseboard.dts
+++ b/arch/arm64/boot/dts/freescale/continental_hdk11_baseboard.dts
@@ -9,7 +9,7 @@
 #include "micron-mt35xu01g-qspi-nor.dtsi"
 
 / {
-	model = "Continental ADC435 Baseboard v1.1";
+	model = "Continental HDK v1.1";
 	chosen {
 		stdout-path = "serial1:115200n8";
 	};
