--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -90,4 +90,4 @@ dtb-$(CONFIG_ARCH_S32) += s32r45-evb.dtb
 dtb-$(CONFIG_ARCH_S32) += s32r45-emu.dtb
 dtb-$(CONFIG_ARCH_S32) += s32v234-evb.dtb
 
-dtb-$(CONFIG_ARCH_S32) += continental_adc435_baseboard.dtb
+dtb-$(CONFIG_ARCH_S32) += continental_hdk11.dtb
